[tool.poetry]
name = "frac-dash-scraper"
version = "0.1.0"
description = "A package to help scrape frac data from PDFs on FracFocus.ca"
authors = ["Dustin Andrews","Andrew Mathers"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.1"
tabula = "^1.0.5"
pandas = "^1.4.1"
pdftotext = "^2.2.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
