[tool.poetry]
name = "frac-dash-scraper"
version = "0.1.0"
description = "A package to help scrape frac data from PDFs on FracFocus.ca"
authors = ["Dustin Andrews","Andrew Mathers"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
"pdfminer.six" = "^20211012"
tabula-py = "^2.3.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
ipykernel = "^6.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
